# chug

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/chug/: __init__.py  loader.py  version.py
src/chug/app/: test.py
src/chug/common/: __init__.py  collate.py  config.py  random.py  task_config.py  types.py  urls.py
src/chug/doc/: __init__.py  constants.py  doc_processor.py  doc_read_processor.py  doc_vqa_processor.py
src/chug/hfds/: __init__.py  collate.py  loader.py  wrappers.py
src/chug/image/: __init__.py  build_transforms_doc.py  build_transforms_image.py  transforms_alb.py  transforms_factory.py  transforms_torch.py
src/chug/task_pipeline/: __init__.py  pipeline_doc_read.py  pipeline_doc_vqa.py  pipeline_factory.py  pipeline_gtparse.py  pipeline_image_text.py  pipeline_manual.py
src/chug/text/: __init__.py  tokenization.py
src/chug/wds/: __init__.py  dataset_info.py  decode.py  filters.py  helpers.py  loader.py  pipeline.py  shardlists.py  tariterators.py
src/chug/webdataset/: __init__.py  doc_anno_pipe.py  image_text_pipe.py  loader.py
tests/: basic.py
