[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "chug"
authors = [
    {name = "Ross Wightman", email = "ross@huggingface.co"},
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
keywords = ["webdataset", "datasets", "sharded", "cluster", "scale", "documents"]
license = {text = "Apache-2.0"}
classifiers = [
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Education',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: Apache Software License',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Topic :: Scientific/Engineering',
        'Topic :: Scientific/Engineering :: Artificial Intelligence',
        'Topic :: Software Development',
        'Topic :: Software Development :: Libraries',
        'Topic :: Software Development :: Libraries :: Python Modules',
]
dependencies = [
        "webdataset",
        "timm",
        "torch",
        "simple_parsing",
        "pypdfium2",
        'importlib-metadata; python_version<"3.8"',
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/huggingface/chug"
repository = "https://github.com/huggingface/chug"

[project.optional-dependencies]
# albumentations (nougat augs)
alb = [
        "albumentations",
        'cv2',
]

[tool.pdm.version]
source = "file"
path = "src/chug/version.py"